--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,8 +1,14 @@
 .nav {
     grid-area: n;
     background-color: darkolivegreen;
+    padding: 20px;
 }
 
-.item {
-    color: red;
+.item a {
+    color: white;
+    text-decoration: none;
+}
+
+.item a.active {
+    color: chartreuse;
 }
