--- a/src/components/common/FormsControls/FormControl.module.css
+++ b/src/components/common/FormsControls/FormControl.module.css
@@ -12,3 +12,10 @@
 {
     color: red;
 }
+
+.formSummaryError {
+    border: red 1px solid;
+    padding: 5px;
+    color: #e86262;
+    width: 100px;
+}
