--- a/src/components/common/FormsControls/FormControl.module.css
+++ b/src/components/common/FormsControls/FormControl.module.css
@@ -19,3 +19,36 @@
     color: #e86262;
     width: 100px;
 }
+
+.save {
+    background-color: #2f6e2c;
+}
+
+.contact {
+    margin: 15px 40px 15px 0px;
+}
+
+.contacts {
+    width: 600px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: center;
+}
+
+.forms {
+    margin: 20px
+}
+
+.form {
+    margin-top: 20px;
+
+}
+
+.buttonSubmit {
+    display: flex;
+    flex-direction: row;
+    justify-content:  right;
+    width: 485px;
+}
