--- a/src/components/common/FormsControls/FormControl.module.css
+++ b/src/components/common/FormsControls/FormControl.module.css
@@ -24,6 +24,27 @@
     background-color: #2f6e2c;
 }
 
+.loginBlock {
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.loginForm {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.buttonLogin {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .contact {
     margin: 15px 40px 15px 0px;
 }
@@ -51,4 +72,8 @@
     flex-direction: row;
     justify-content:  right;
     width: 485px;
+}
+
+.field {
+    width: 300px;
 }
