--- a/src/components/Users/Paginator.module.css
+++ b/src/components/Users/Paginator.module.css
@@ -6,7 +6,13 @@
     justify-content: center;
 }
 .pageNumber {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     border: 1px solid grey;
+    min-width: 20px;
+    height: 25px;
+    padding: 0 2px;
 }
 
 .pageNumber.selectedPage {
