--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: right;
+    justify-content: space-between;
+}
+
+.nameNetwork {
+    margin-left: 30px;
 }
 
 .header img {
@@ -22,11 +26,11 @@
 }
 
 .loginName {
-    width: 300px;
+    width: 250px;
     color: chartreuse;
-    margin-right: 15px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    /*margin-right: 15px;*/
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*align-items: center;*/
+    /*justify-content: space-between;*/
 }
